# copilot-env-template

./: .gitignore  Makefile  QUICKSTART.md  README.md  conftest.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md  data-quality.agent.md  docs-sync.agent.md  notebook-organizer.agent.md  project-scaffolder.agent.md
.github/instructions/: data-engineering.instructions.md  databricks.instructions.md  fabric-and-databricks.instructions.md  fabric.instructions.md  notebooks.instructions.md  python.instructions.md  testing-and-quality.instructions.md
.github/prompts/: analyze-data.prompt.md  lesson.md  organize-notebook.md  organize-notebook.prompt.md  review-code.md  setup-project.md  sync-docs.md  sync-docs.prompt.md  test-this.md  validate-pipeline.md
.github/skills/auto-doc-sync/: SKILL.md  doc-scan.py
.github/skills/auto-doc-sync/examples/: README-doc-section.md
.github/skills/capture-data-eng-lessons/: SKILL.md
.github/skills/code-review-notebooks/: SKILL.md
.github/skills/data-pipeline-tdd/: SKILL.md
.github/skills/data-pipeline-tdd/examples/: test_notebook_extraction.py  test_transform_red.py
.github/skills/data-quality-testing/: SKILL.md
.github/skills/data-quality-testing/examples/: test_quality_pytest.py  validator_pandas.py  validator_polars.py
.github/skills/databricks-notebooks/: SKILL.md
.github/skills/databricks-notebooks/checklists/: runtime-readiness.md
.github/skills/fabric-databricks-python-runtime/: SKILL.md
.github/skills/fabric-databricks-python-runtime/checklists/: runtime-readiness.md
.github/skills/markdown-notebook-docs/: SKILL.md
.github/skills/microsoft-fabric-notebooks/: SKILL.md
.github/skills/notebook-as-code/: SKILL.md
.github/skills/notebook-doc-templates/: SKILL.md
.github/skills/polars-spark-pandas-patterns/: SKILL.md
.github/skills/python-notebook-code-review/: SKILL.md
.github/skills/python-notebook-structure/: SKILL.md
.github/skills/spark-pandas-best-practices/: SKILL.md
docs/: AGENTS.md  DATA-PLATFORM-GUIDE.md  GOLDEN-PATH.md  PROMPTS.md  SETUP.md  SKILLS.md
scripts/: validate_skills.py
tasks/: lessons.md
